--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,9 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
- 
+
 @layer base {
   :root {
+
+    --dark-blue: 223 100% 20%;
+    --light-blue: 210 100% 44%;
+
+    --pastel-light-blue: 218 26% 76%;
+    --pastel-dark-blue: 219 27% 57%;
+
+
     --background: 0 0% 100%;
     --foreground: 222.2 84% 4.9%;
 
@@ -13,17 +21,17 @@
     --popover: 0 0% 100%;
     --popover-foreground: 222.2 84% 4.9%;
  
-    --primary: 222.2 47.4% 11.2%;
+    --primary: var(--dark-blue); /* Primary originally: 222.2 47.4% 11.2%; */ 
     --primary-foreground: 210 40% 98%;
  
     --secondary: 210 40% 96.1%;
-    --secondary-foreground: 222.2 47.4% 11.2%;
+    --secondary-foreground: 222.2 47.4% 11.2%; /* Primary originally: 222.2 47.4% 11.2%; */ 
  
-    --muted: 210 40% 96.1%;
+    --muted: 210 40% 96.1%; /* Secondary origiunally: 210 40% 96.1%; */
     --muted-foreground: 215.4 16.3% 46.9%;
  
-    --accent: 210 40% 96.1%;
-    --accent-foreground: 222.2 47.4% 11.2%;
+    --accent: 210 40% 96.1%; /* Secondary 210 40% 96.1%; */
+    --accent-foreground: 222.2 47.4% 11.2%; /* Primary originally: 222.2 47.4% 11.2%; */ 
  
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 210 40% 98%;
